# btc-sim-engine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
.streamlit/: config.toml
config/: default.yaml
dashboard/: app.py  btc-treasury-robust.html
dashboard/data/: sim-data.js
data/: __init__.py  loader.py
data/processed/: BTC-USD_2013-01-01_processed.parquet
data/raw/: BTC-USD_2013-01-01_raw.parquet
docs/: RESULTS.md
models/: __init__.py  base.py  garch.py  gbm.py  hmm.py  regime_block_bootstrap.py  registry.py
optimization/: __init__.py  experiment.py  search.py  sensitivity.py
reporting/: __init__.py  comparison.py  export.py  leaderboard.py
results/: leaderboard_2026-03-31.html  leaderboard_2026-04-01.csv  leaderboard_2026-04-01.json
results/phase2/config1/: leaderboard_2026-03-31.csv  leaderboard_2026-03-31.json  phase2_config1_quick.json
results/phase2/config6/: leaderboard_2026-04-01.html
results/phase3/garch_sweep/: garch_sweep_results.json
results/validation_audit/: validation_audit.json
scripts/: export_html_data.py  export_phase2_results.py  fetch_data.py  run_experiment.py  run_garch_sweep.py  run_garch_walkforward.py  run_phase2_baseline.py  run_single_model.py  run_validation_audit.py
tests/: test_models.py  test_optimization.py  test_validation.py
validation/: __init__.py  audit.py  backtest.py  diagnostics.py  distributions.py  metrics.py  scorer.py
viz/: __init__.py  diagnostics.py  distributions.py  paths.py  style.py
(+1 files in other folders)
